@@ -23,25 +23,23 @@
  */
 package hudson.widgets;
 
+import edu.umd.cs.findbugs.annotations.CheckForNull;
 import hudson.Functions;
-import jenkins.util.SystemProperties;
 import hudson.model.ModelObject;
 import hudson.model.Run;
-
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.List;
+import javax.servlet.ServletException;
+import jenkins.util.SystemProperties;
 import jenkins.widgets.HistoryPageEntry;
 import jenkins.widgets.HistoryPageFilter;
 import org.kohsuke.stapler.Header;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerRequest;
 import org.kohsuke.stapler.StaplerResponse;
-
-import javax.annotation.CheckForNull;
-import javax.servlet.ServletException;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
 
 /**
  * Displays the history of records (normally {@link Run}s) on the side panel.
@@ -164,9 +162,9 @@ public class HistoryWidget<O extends ModelObject,T> extends Widget {
             return Collections.emptyList();
         }
 
-        List<HistoryPageEntry<T>> pageEntries = new ArrayList<HistoryPageEntry<T>>();
+        List<HistoryPageEntry<T>> pageEntries = new ArrayList<>();
         while (iterator.hasNext()) {
-            pageEntries.add(new HistoryPageEntry<T>(iterator.next()));
+            pageEntries.add(new HistoryPageEntry<>(iterator.next()));
         }
 
         return pageEntries;
@@ -184,7 +182,7 @@ public class HistoryWidget<O extends ModelObject,T> extends Widget {
     }
 
     protected HistoryPageFilter<T> newPageFilter() {
-        HistoryPageFilter<T> historyPageFilter = new HistoryPageFilter<T>(THRESHOLD);
+        HistoryPageFilter<T> historyPageFilter = new HistoryPageFilter<>(THRESHOLD);
 
         if (newerThan != null) {
             historyPageFilter.setNewerThan(newerThan);
@@ -220,7 +218,7 @@ public class HistoryWidget<O extends ModelObject,T> extends Widget {
         rsp.setContentType("text/html;charset=UTF-8");
 
         // pick up builds to send back
-        List<T> items = new ArrayList<T>();
+        List<T> items = new ArrayList<>();
 
         if (n != null) {
             String nn=null; // we'll compute next n here
@@ -285,7 +283,7 @@ public class HistoryWidget<O extends ModelObject,T> extends Widget {
             return null;
         }
         try {
-            return new Long(paramVal);
+            return Long.valueOf(paramVal);
         } catch (NumberFormatException nfe) {
             return null;
         }
